--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h2>Integrantes del Equipo</h2>
         <div class="tabla-scroll">
             <table id="tabla" class="overflow-auto">
-                <thaead>
+                <thead>
                     <!--"tr" - Table row - Fila-->
                     <tr>
                         <th>ID</th>
@@ -38,7 +38,7 @@
                         <th>Correo Electronico</th>
                         <th>Acciones</th> <!-- Botones para editar y eliminar-->
                     </tr>
-                </thaead>
+                </thead>
                 <tbody>
                     <!--Aqui van los registros que vienen por la API-->
                 </tbody>
@@ -46,9 +46,27 @@
         </div>
     </main>
 
+    <!--El modal/dialog aparece frente al contenido-->
+    <dialog id="mdAgregar">
+        <article>
+            <header>
+                <a href="#" class="close" id="btnCerrar"></a>
+                <h3>Agregar Integrante</h3>
+            </header>
+            <form action="frmAgregar">
+                <input type="text" id="txtNombre" placeholder="Nombre" required>
+                <input type="text" id="txtApellido" placeholder="Apellido" required>
+                <input type="email" id="txtEmail" placeholder="Correo Electronico" required>
+
+                <button type="submit" class="contrast">Guardar</button>
+            </form>
+        </article>
+    </dialog>
+
     <!--Boton flotante para agregar registros-->
     <button id="btnAgregar" class="add-button">
         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-user-round-plus-icon lucide-user-round-plus"><path d="M2 21a8 8 0 0 1 13.292-6"/><circle cx="10" cy="8" r="5"/><path d="M19 16v6"/><path d="M22 19h-6"/></svg>
+        
     </button>
     
     <script src="JS/srcript.js"></script>
