Funcion para agregar completa

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <a href="#" class="close" id="btnCerrar"></a>
                 <h3>Agregar Integrante</h3>
             </header>
-            <form action="frmAgregar">
+            <form id="frmAgregar">
                 <input type="text" id="txtNombre" placeholder="Nombre" required>
                 <input type="text" id="txtApellido" placeholder="Apellido" required>
                 <input type="email" id="txtEmail" placeholder="Correo Electronico" required>
