Model Editar completo

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <input type="text" id="txtApellidoModificar" placeholder="Apellido" required>
                 <input type="email" id="txtEmailModificar" placeholder="Correo Electronico" required>
 
-                <button type="submit" class="contrast">Guardar</button>
+                <button type="submit" class="contrast">Actualizar</button>
             </form>
         </article>
     </dialog>
